# deep-rl-101

./: .env.example  Makefile  README.md  pyproject.toml
config/: config.yaml
docs/: model-architecture.md
src/: __init__.py  app.py  inspect_ppo_model.py  local_llm.py  main.py
src/gym_doc/: basic_rl.py
src/gym_learning/: basic_rl.py  blackjack_training_agent.py  grid_world_env.py
src/hf_rl_class/: unit1.ipynb  unit1.py  unit_0_luna_lander.py
src/utils/: llm.py
