[project]
name = "deep_rl_101"
version = "0.1.0"
description = "Deep Rl 101 project"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
dependencies = [
    "click>=8.2.1",
    "dask[complete,distributed]>=2025.9.0",
    "gymnasium>=0.28.1",
    "huggingface-sb3>=3.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "pyvirtualdisplay>=3.0",
    "pyyaml>=6.0.2",
    "stable-baselines3==2.0.0a5",
    "swig>=4.4.1",
]

[project.scripts]
deep_rl_101 = "deep_rl_101.main:main"

[tool.ruff]
target-version = "py312"
line-length = 240
indent-width = 4

# Exclude files and directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable linters
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "PL", # pylint
]

# Ignore specific rules
ignore = ["D100"]  # 禁用缺少模块文档字符串的检查

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "loguru", "dask", "uvicorn"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
